5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1734_2505.log
== TEST (2019-05-14 17:45:19) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k = int(input("numero de termos: "))
soma  = 0
b = 1
i = 0

while(i < k):
	sinal = (-1)**i
	sen = sinal*((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:45:23) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k = int(input("numero de termos: "))
soma  = 0
b = 1
i = 0

while(i < k):
	sinal = (-1)**i
	sen = sinal*((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.170741
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:52:50) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k = int(input("numero de termos: "))
soma  = 0
b = 1
i = 0

while(i < k):
	sinal = (-1)**i
	sen = sinal*((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.153592
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:55) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal * (ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- ERROR:
File "XXXX", line 9
    sen = sinal * (ang**b)/factorial(b))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:34:14) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.133301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 7, in <module>
    while(i < k):
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:34:30) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.121696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 7, in <module>
    while(i < k):
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:41) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(i < k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:34:44) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.162382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 7, in <module>
    while(i < k):
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:49) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + seno
NameError: name 'seno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:35:51) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + seno
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.247717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 11, in <module>
    soma = soma + seno
NameError: name 'seno' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:26) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.188519
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.3012952459
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.3011348047
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.249088823
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:28) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.147998
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.3012952459
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.3011348047
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.249088823
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:28) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- OUTPUT:
2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:30) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (1)**i
	sen = sinal *((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.179243
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.3012952459
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.3011348047
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.249088823
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:54) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k= int(input("digite numero de termos: "))
soma = 0
b= 1
i= 0

while(i < k):
	sinal = (-1)**i
	sen = sinal*((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.179382
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
